# module_imagecrop

./: .gitignore  README.md  build.gradle  local.properties  settings.gradle
app/: build.gradle
app/libs/: lib_crop_release_20210323.aar
app/src/main/: AndroidManifest.xml
app/src/main/java/com/image/compress/: ImageUtil.java  MainActivity.java
app/src/main/java/com/kalu/jpegjni/: ImageUtil.java  MainActivity.java
app/src/main/java/com/yalantis/ucrop/sample/: ResultActivity.java  SampleActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
build_libjpeg/: CMakeLists.txt  build.gradle
build_libjpeg/src/main/: AndroidManifest.xml
build_libjpeg/src/main/cpp/libjpeg/: CMakeLists.txt
build_libjpegturbo/: CMakeLists.txt  build.gradle
build_libjpegturbo/src/main/: AndroidManifest.xml
build_libjpegturbo/src/main/cpp/libjpegturbo/: CMakeLists.txt
build_libjpegturbo/src/main/cpp/libjpegturbo/sharedlib/: CMakeLists.txt
build_libpng/: CMakeLists.txt
build_libpng/src/main/: AndroidManifest.xml
gradle/wrapper/: gradle-wrapper.properties
lib/: CMakeLists.txt  build.gradle
lib/src/main/: AndroidManifest.xml
lib/src/main/cpp/: image-compress.cpp
lib/src/main/cpp/include/: mconst.h
lib/src/main/java/lib/image/compress/: CompressManager.java  CompressNative.java
lib_crop_java/: build.gradle
lib_crop_java/src/main/java/com/yalantis/ucrop/: UCrop.java
lib_crop_java/src/main/res/xml/: crop_fileprovider.xml
lib_crop_native/: CMakeLists.txt  build.gradle
lib_crop_native/cmake_build_scripts/: CMakeLists.txt  crop.cpp  crop.h  crop_turbo.cpp  crop_turbo.h
lib_crop_native/cmake_build_scripts/libjpegturbo/: CMakeLists.txt  jconfigint.h
lib_crop_native/cmake_build_scripts/libjpegturbo/java/org/libjpegturbo/turbojpeg/: TJ.java  TJCompressor.java  TJCustomFilter.java  TJTransform.java  YUVImage.java
lib_crop_native/src/main/: AndroidManifest.xml
lib_crop_native/src/main/cpp/: crop_turbo.cpp
lib_crop_native/src/main/cpp/libjpegturbo/java/: TJBench.java  TJExample.java  TJUnitTest.java
lib_crop_native/src/main/cpp/libjpegturbo/java/org/libjpegturbo/turbojpeg/: TJDecompressor.java  TJException.java  TJScalingFactor.java  TJTransformer.java
lib_crop_native/src/main/cpp/libjpegturbo/sharedlib/: CMakeLists.txt
lib_crop_native/src/main/java/com/yalantis/ucrop/: UCrop.java  UCropActivity.java  UCropFragment.java  UCropFragmentCallback.java
lib_crop_native/src/main/java/com/yalantis/ucrop/callback/: BitmapCropCallback.java  BitmapLoadCallback.java
lib_crop_native/src/main/java/com/yalantis/ucrop/fileprovider/: CropFileProvider.java
lib_crop_native/src/main/java/com/yalantis/ucrop/task/: BitmapCropTask.java
lib_crop_native/src/main/java/com/yalantis/ucrop/view/: CropImageView.java  GestureCropImageView.java  OverlayView.java  TransformImageView.java  UCropView.java
lib_crop_native/src/main/java/com/yalantis/ucrop/view/widget/: AspectRatioTextView.java  HorizontalProgressWheelView.java
lib_crop_native/src/main/res/values/: strings.xml
lib_jpeg/: CMakeLists.txt  build.gradle
lib_jpeg/output/jpeg/: cjpeg  djpeg  jcstest  jpegtran
lib_jpeg/output/jpeg-turbo/: rdjpgcom  tjbench  tjbench-static  tjexample  tjunittest  wrjpgcom
lib_jpeg/output/jpeg-turbo/armeabi/: cjpeg-static  djpeg-static  md5cmp  tjexample  tjunittest
lib_jpeg/output/jpeg/armeabi/: jcstest  jpegtran
lib_jpeg/src/main/: AndroidManifest.xml
lib_jpeg/src/main/cpp/: CMakeLists.txt  image-compress.cpp
lib_jpeg/src/main/cpp/customlib/: CMakeLists.txt  compress.cpp  synccompress.cpp
lib_jpeg/src/main/cpp/java/doc/: deprecated-list.html  index-all.html
lib_jpeg/src/main/cpp/java/doc/org/libjpegturbo/turbojpeg/: TJ.html  TJCompressor.html  TJCustomFilter.html  TJDecompressor.html  TJTransform.html  TJTransformer.html  YUVImage.html
lib_jpeg/src/main/cpp/sharedlib/: CMakeLists.txt
lib_jpeg/src/main/java/lib/image/compress/: CompressManager.java  ImageCompress.java  ImageError.java  ImageUtil.java  OnCompressChangeListener.java  OnImageCompressChangeListener.java
lib_jpeg/src/main/java/lib/kalu/image/: Compress.java  CompressManager.java  CompressNative.java  OnCompressChangeListener.java
lib_jpegturbo/: CMakeLists.txt  build.gradle
lib_jpegturbo/src/main/cpp/: compress.cpp
lib_jpegturbo/src/main/cpp/jpegturbo/: CMakeLists.txt
lib_jpegturbo/src/main/cpp/jpegturbo/sharedlib/: CMakeLists.txt
lib_jpegturbo/src/main/cpp/jpegturbo201/: CMakeLists.txt
lib_jpegturbo/src/main/cpp/jpegturbo201/sharedlib/: CMakeLists.txt
lib_jpegturbo/src/main/java/lib/image/compress/: Compress.java  CompressNative.java  OnCompressChangeListener.java
